# Intern_AI_Assistance_Teacher

./: .env.example  .gitignore  FRONTEND_REFACTOR_LOG.md  README.md  compose.yml  index.html  package-lock.json  vite.config.ts
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  classroom.py  teacher.py
backend/tests/: test_health.py
docs/: index.html
docs/assets/: index-BRMIqx3J.js  index-BoCCcvV7.css  index-DGGUgSMV.js  index-DJPzThqQ.js  index-Gqfbcr_L.css
src/: main.tsx
src/app/: App.tsx
src/app/config/: navigation.ts
src/app/layout/: AppShell.tsx
src/app/pages/publish/: PublishWorkspace.tsx
src/styles/: fonts.css  index.css  theme.css
